# fd

./: .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  README.md  build.rs
globset/: UNLICENSE
globset/src/: glob.rs
shell_completion/: _ff  _ff.ps1  ff.bash  ff.fish
src/: app.rs  counter.rs  foss.rs  fshelper.rs  glob.rs  internal.rs  lscolors.rs  main.rs  output.rs  pattern.rs  walk.rs
src/exec/: command.rs  mod.rs  nonblock.rs  schedule.rs  ticket.rs
src/filter/: filetype.rs  mod.rs  parser.rs  reduction.rs
src/glob/: mod.rs
src/globset/: Cargo.toml.disabled  LICENSE-MIT
src/globset/src/: glob.rs  lib.rs
src/lscolors/: mod.rs
src/lscolors/src/: lib.rs  style.rs
tests/: tests.rs
tests/testenv/: mod.rs
