[package]
version = "0.17.2"
name    = "ff-find"
license = "MIT/Apache-2.0"
authors = [
    "David Peter <mail@david-peter.de>",
    "J.W <jakwings@gmail.com>",
]

include = [
  "/Cargo.toml",
  "/src/**/*",
  "/build.rs",
  "/shell_completion/*",
  "/README*",
  "/LICENSE*",
]

build       = "build.rs"
readme      = "README.md"
homepage    = "https://github.com/jakwings/ff-find"
repository  = "https://github.com/jakwings/ff-find"
description = "ff is a simple and fast utility for file search on Unix commandline."
categories  = [ "command-line-utilities" ]
keywords    = [ "search", "find", "file", "filesystem", "tool" ]

[badges]
maintenance = { status = "experimental" }
travis-ci   = { repository = "jakwings/ff-find" }

[[bin]]
name = "ff"
path = "src/main.rs"

[lib]
name = "globset"
path = "src/globset/src/lib.rs"

[dependencies]
ansi_term = "0.11"
atty = "0.2"
clap = "~2.32"
ctrlc = { version = "3", features = ["termination"] }
ignore = "~0.4.4"
nix = "0.11"
num_cpus = "1"
regex = "1.0"
#[globset]
aho-corasick = "0.6"
fnv = "1.0"
log = "0.4"
memchr = "2"

[dev-dependencies]
diff = "0.1"
tempdir = "0.3"
#[globset]
glob = "0.2"

[build-dependencies]
clap = "2"

[features]
simd-accel = [ "regex/unstable" ]
