[package]
version = "0.24.9"
name    = "ff-find"
license = "MIT/Apache-2.0"
authors = [
    "David Peter <mail@david-peter.de>",
    "J.W <jakwings@gmail.com>",
]

include = [
  "/Cargo.toml",
  "/src/**/*",
  "/build.rs",
  "/shell_completion/*",
  "/README*",
  "/LICENSE*",
]

build       = "build.rs"
readme      = "README.md"
homepage    = "https://github.com/jakwings/ff-find"
repository  = "https://github.com/jakwings/ff-find"
description = "ff is a simple and fast utility for finding files on Unix commandline. It also supports complex filters like GNU find."
categories  = [ "command-line-utilities" ]
keywords    = [ "search", "find", "file", "filesystem", "tool" ]

[badges]
maintenance = { status = "experimental" }
travis-ci   = { repository = "jakwings/ff-find" }

[[bin]]
name = "ff"
path = "src/main.rs"

[lib]
name = "globset"
path = "src/globset/src/lib.rs"

[dependencies]
ansi_term = "0.12"
atty = "0.2"
clap = "2.33"
ignore = "0.4.10"
lazy_static = "1"
nix = "0.15"
num_cpus = "1"
regex = "1"
same-file = "1"
signal-hook = "0.1"
#[globset]
aho-corasick = "0.6"
fnv = "1"
log = "0.4"
memchr = "2"

[dev-dependencies]
diff = "0.1"
tempdir = "0.3"
tempfile = "3"
#[globset]
glob = "0.3"

[build-dependencies]
clap = "2.33"

[features]
simd-accel = [ "regex/unstable" ]
reduction = []
